solution/duc/language/src/test/resources/error/InvalidAssignmentInBlock.duc
function cDouble(x) {
  return 2 * x;
}

function main() {
  cDouble(2) = 4;
}